# device-management-prototype

./: .gitignore  CMakeLists.txt  README.md  device_service.proto
src/backend/: service_impl.cc
src/frontend/: client.py  device_service_pb2.py  device_service_pb2_grpc.py
